--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,12 @@
-<IfModule mod_rewrite.c> 
-RewriteEngine on 
+#<IfModule mod_rewrite.c>
+#RewriteEngine on
+#
+#RewriteRule ^$ public/ [L]
+##RewriteRule (.*) public/$1 [L]
+#</IfModule>
+<IfModule mod_rewrite.c>
+RewriteEngine on
 
-RewriteRule ^$ public/ [L] 
-#RewriteRule (.*) public/$1 [L] 
-</IfModule> 
+RewriteRule ^$ public/ [L]
+RewriteRule (.*) public/$1 [L]
+</IfModule>
